<resources>
    <string name="app_name">photos49</string>
    <string name="photos49">Photos49</string>
    <string name="add_album">Add Album</string>
    <string name="album_list">Album list</string>
    <string name="album_name">Album Name</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="album_options">Album Options</string>
    <string name="album_menu">Album menu</string>
    <string name="albums">Albums</string>
    <string name="photo_list">Photo List</string>
    <string name="add_photo">Add Photo</string>
    <string name="photo_thumbnail">Photo thumbnail</string>
    <string name="photo_options">Photo options</string>
    <string name="move_to_album">Move to Album</string>
    <string name="move">Move</string>
    <string name="add_tag">Add Tag</string>
    <string name="previous_photo">Previous photo</string>
    <string name="_1_10">1/10</string>
    <string name="next_photo">Next photo</string>
    <string name="slideshow">Slideshow</string>
    <string name="photo">Photo</string>
    <string name="photo_display">Photo display</string>
    <string name="tag_type">Tag Type</string>
    <string name="person">Person</string>
    <string name="location">Location</string>
    <string name="enter_value">Enter value</string>
    <string name="tag_added">Tag added</string>
    <string name="tag_removed">Tag removed</string>
    <string name="replace_location">Replace Location</string>
    <string name="select_tag_type">Select Tag Type:</string>
    <string name="search_by_tag">Search by Tag</string>
    <string name="search_photos_by_tags">Search Photos by Tags</string>
    <string name="search">Search</string>
    <string name="add_another_condition">Add another condition</string>
    <string name="tag_value">Tag value</string>
</resources>