<!-- res/layout/activity_main.xml -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- App title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/cornflowerBlue"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/photos49"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <!-- Albums header with search button -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/aliceBlue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/albums"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnSearchByTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:text="@string/search_by_tag"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:drawablePadding="8dp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <!-- Album list -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/aliceBlue"
            android:padding="8dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:contentDescription="@string/album_list"/>
    </LinearLayout>

    <!-- Floating action button for creating new albums -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_album"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/lightBlue" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>