<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/album_view.xml -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/album_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AlbumActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Toolbar and Centered Title -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/cornflowerBlue"
                app:contentInsetStartWithNavigation="0dp"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"/>

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/album_name"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:ellipsize="end" />
        </RelativeLayout>

        <!-- Photo list -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photoRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:background="@color/aliceBlue"
            android:contentDescription="@string/photo_list"/>
    </LinearLayout>

    <!-- FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/add_photo"
        app:backgroundTint="@color/lightBlue" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
